[project]
name = "push2-bridge"
version = "0.1.0"
description = "VDMX → Syphon → Push 2 display bridge for macOS"
requires-python = ">=3.10"
dependencies = [
    "push2-python",
    "syphon-python",
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 100
