[project]
name = "push2-bridge"
version = "0.1.0"
description = "VDMX → Syphon → Push 2 display bridge for macOS"
requires-python = ">=3.9"
dependencies = [
    "push2-python @ git+https://github.com/ffont/push2-python.git",
    "syphon-python",
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
push2-bridge = "push2_bridge.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100
